--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,9 @@
 </head>
 
 <body>
-	<h1 class="h1-header">MY FAVORITE SCI-FI MOVIES</h1>
+	<h1 class="h1-header">30 SCIENTIFIC DIVULGATION BOOKS THAT YOU MUST READ</h1>
 	<main id="root">
 	</main>
-	<script src="https://content.codecademy.com/courses/React/react-16-full.min.js"></script>
-  	<script src="./src/index.compiled.js"></script>
 </body>
 
 </html>
