--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="./index.css">
 	<link rel="stylesheet" href="./styles.css">
-	<title>My Favorite Sci-Fi Movies</title>
+	<title>Books You Must Read</title>
 </head>
 
 <body>
